footer styling, margin issue fixed by wrapping the footer in a container-fluid as twitter bootstrap needed that

--- a/app/assets/stylesheets/site.sass
+++ b/app/assets/stylesheets/site.sass
@@ -43,20 +43,23 @@ html, body
 
 .wrapper 
   min-height: 100%
+  position: relative
   height: auto !important
   height: 100%
-  margin: 0 auto -142px 
+  margin: 0 auto -120px 
 
 .footer, .push
-  height: 142px
+  height: 120px
   
 .footer
-  width: auto
-  background: #999
+  background: #eee
+  
+.footer ul
+  padding: 20px
   
 .footer li
   display: inline
-  padding-left: 12px
+  padding-right: 12px
 
 
 
